# skeleton_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.lingma/rules/: cpp.md
apps/demo/: CMakeLists.txt  main.cpp
cmake/: FindCnpyCustom.cmake  FindGTest.cmake  FindGTestCustom.cmake  FindOpenCVCustom.cmake  FindRgaCustom.cmake  FindRknn.cmake  FindSpdlogCustom.cmake  FindThirdParty.cmake  FindYamlCppCustom.cmake  FindZlibCustom.cmake  aarch64-toolchain.cmake  moduleAConfig.cmake.in  x86_64-toolchain.cmake
include/skeleton_cpp/calculator/: Calculator.hpp
include/skeleton_cpp/utils/: logger_factory.h  logger_factory.hpp  yaml.hpp  yaml.inl  yaml_parser_utils.hpp
lib/subproject/: CMakeLists.txt
lib/subproject/include/subproject/: image_opener.hpp
lib/subproject/src/: image_opener.cpp
scripts/: build.sh  build_third_party.sh  build_third_party_aarch64.sh  build_third_party_x86_64.sh  cmd.txt  install.sh  install_third_party.sh  install_third_party_x86_64.sh  test.sh  third_party_builder.sh
scripts/third_party_builders/: builder_cnpy.sh  builder_gtest.sh  builder_opencv.sh  builder_rga.sh  builder_rknpu.sh  builder_spdlog.sh  builder_yaml-cpp.sh  builder_zlib.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/demo_app/: CMakeLists.txt  main.cpp
src/calculator/: Calculator.cpp
src/include/moduleA/: image_loader.hpp
src/src/: CMakeLists.txt
src/src/moduleA/: image_loader.cpp
src/utils/: logger_factory.cpp  yaml.cpp  yaml_parser_utils.cpp
tests/: CMakeLists.txt  calculator_test.cpp
tests/utils/: environment.hpp  test_yaml.cpp
