<package format="2">
  <name>CppSkeletonProject</name>
  <version>0.1.0</version>
  <description>Your C++ project with ROS compatibility</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
</package>
